Revision history for {{ $dist->name }}:

{{$NEXT}}
 [Enhancements]
 - Respond to HEAD requests.

 [Bug Fixes]
 - Specified minimum version of JSON::MaybeXS so that SYNOPSIS and
   tests work properly.

 [Tests]
 - Add more tests.

v0.1.0    2021-06-08 17:15:00+01:00 Europe/London
 - Initial version.